feat: improve overall docker setup

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE_NAME=examhub
-DATABASE_HOST=localhost
+DATABASE_HOST=localhost # if your using provided 'compose.yml' for docker then replace 'localhost' with 'db'
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_PORT=3306
+TARGET=development # For dev, change this to 'production' for production
